--- a/src/components/PageComponents/Home/home.module.css
+++ b/src/components/PageComponents/Home/home.module.css
@@ -625,6 +625,12 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
 	cursor: pointer;
 }
 
+
+.AffiliatesRow {
+  display: flex;
+  flex-flow: initial wrap;
+}
+
 .AffiliatesSlider {
 	position: relative; 
 	display: flex;
@@ -637,7 +643,7 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
 	box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.14);
 	background: #FFFFFF;
 	border-radius: 10px;
-  width: 23.5%;
+  width: auto;
   margin: auto;
 }
 .AffilatesSection h2 {
@@ -1116,6 +1122,10 @@ h1 .HeroTitle {
       display: block;
       margin: 25px auto;
       padding: 0px;
+    }
+
+    .AffiliatesRow {
+      display: block;
     }
 
 
